Update Commands for Java 17